src/z80asm/z80asm2/t/40-syntax/expected/ds_string_01.txt
% z88dk-z80asm -v -dump-after-parse t/40-syntax//input/ds_string_01.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Define constant: __FLOAT_GENMATH__ = 1
Assembling t/40-syntax/input/ds_string_01.asm...
t/40-syntax/input/ds_string_01.asm:1:3: error: Expression expected
    ds
      ^
t/40-syntax/input/ds_string_01.asm:2:1: error: Unterminated expression after "ds"
    ds ,
    ^
t/40-syntax/input/ds_string_01.asm:3:13: error: Unexpected token: ","
    ds 1,"hello",
                ^
Program: ds_string_01
    Modules:
        Module: ds_string_01 (current)
            Sections:
                Section:  (current)
    Statements:
        DefsStringStmt
            Location: t/40-syntax/input/ds_string_01.asm:4:1
            Size:
                ExprBinary: +
                    Location: t/40-syntax/input/ds_string_01.asm:4:6
                    Value type: Unknown
                    Tokens: 1+2*3
                    LHS:
                        ExprLiteralInt: 1
                            Location: t/40-syntax/input/ds_string_01.asm:4:4
                            Value type: Unknown
                            Tokens: 
                    RHS:
                        ExprBinary: *
                            Location: t/40-syntax/input/ds_string_01.asm:4:8
                            Value type: Unknown
                            Tokens: 
                            LHS:
                                ExprLiteralInt: 2
                                    Location: t/40-syntax/input/ds_string_01.asm:4:6
                                    Value type: Unknown
                                    Tokens: 
                            RHS:
                                ExprLiteralInt: 3
                                    Location: t/40-syntax/input/ds_string_01.asm:4:8
                                    Value type: Unknown
                                    Tokens: 
            String literal: "hello"
            Filler byte: 0
